--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
+    "vuelidate": "^0.7.5",
+    "vuelidate-property-decorators": "^1.0.28",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/vuelidate": "^0.7.13",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
